# quotas

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-CC0  PLAN.md  README.md  justfile  supported-tools.txt  todo.txt
docs-usage/: codex.md  github-copilot.md  grok.md  kimi.md  minimax.md  providers.md  zai.md
docs/superpowers/plans/: 2026-04-17-detail-favorites-refresh.md  2026-07-11-minimax-fixtures-tui-payload.md
docs/superpowers/specs/: 2026-04-17-detail-favorites-refresh-design.md  2026-07-11-minimax-fixtures-tui-payload-design.md
screenshots/: autorefresh-100x24.txt  autorefresh-160x50.txt  autorefresh-80x20-page2.txt  autorefresh-80x20.txt  autorefresh-disabled-100x24.txt  detail-160x50.txt  detail-80x20.txt  iter1.ansi  iter1.txt  iter10-page2.txt  iter10.txt  iter2.ansi  iter2.txt  iter3.ansi  iter3.txt  iter4.ansi  iter4.txt  iter5.ansi  iter5.txt  iter6.ansi  iter6.txt  iter7.ansi  iter7.txt  iter8.ansi  iter8.txt  iter9.txt  log.md  snap-120x40.ansi  snap-120x40.txt  snap-160x50.ansi  snap-160x50.txt  snap-200x60.ansi  snap-200x60.txt  snap-80x20.ansi  snap-80x20.txt  snap-80x30.ansi  snap-80x30.txt
src/: cache.rs  config.rs  lib.rs  main.rs  update.rs
src/auth/: cursor.rs  env.rs  file.rs  mod.rs  oauth.rs  opencode.rs  refresh.rs
src/output/: json.rs  mod.rs  statusline.rs
src/providers/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  deepseek.rs  gemini.rs  github_copilot.rs  grok.rs  kimi.rs  mimo.rs  minimax.rs  mod.rs  openrouter.rs  siliconflow.rs  zai.rs
src/tui/: bar.rs  dashboard.rs  detail.rs  freshness.rs  mod.rs  provider_card.rs  usage_bar.rs
tests/fixtures/antigravity/: retrieve_user_quota_live.json  retrieve_user_quota_summary_live.json
tests/fixtures/codex/: rate_limit_reset_credits_live.json  wham_usage_live.json
tests/fixtures/cursor/: plan_default.json  usage_default.json
tests/fixtures/gemini/: retrieve_user_quota_live.json
tests/fixtures/grok/: cli_billing_default.json  cli_billing_format_credits.json  cli_user.json
tests/fixtures/kimi/: coding_usages_default.json  coding_usages_post_reset.json
tests/fixtures/minimax/: coding_plan_remains_live.json
