[package]
name = "quotas"
version = "0.9.0"
edition = "2021"
description = "CLI that auto-detects AI provider credentials (Claude, Codex, MiniMax, Kimi, Z.ai, Grok/xAI, …) and shows your usage quotas in a TUI or JSON."
license = "MIT OR Apache-2.0"
repository = "https://github.com/clankercode/quotas"
homepage = "https://github.com/clankercode/quotas"
readme = "README.md"
keywords = ["cli", "tui", "quota", "usage", "llm"]
categories = ["command-line-utilities"]
authors = ["Max Kaye"]
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
url = "2"
async-trait = "0.1"
toml = "0.9"
gethostname = "1"
base64 = "0.22"
# Cursor IDE stores its session token in a SQLite globalStorage DB
# (state.vscdb); bundled so we don't depend on a system libsqlite.
rusqlite = { version = "0.37", features = ["bundled"] }

ratatui = "0.30"
crossterm = "0.29"

[profile.release]
lto = true
codegen-units = 1
