[package]
name = "quotas"
version = "0.10.0"
edition = "2021"
description = "CLI that auto-detects AI provider credentials (Claude, Codex, MiniMax, Kimi, Z.ai, Grok/xAI, …) and shows your usage quotas in a TUI or JSON."
license = "MIT OR Apache-2.0"
repository = "https://github.com/clankercode/quotas"
homepage = "https://github.com/clankercode/quotas"
readme = "README.md"
keywords = ["cli", "tui", "quota", "usage", "llm"]
categories = ["command-line-utilities"]
authors = ["Max Kaye"]
# rusqlite 0.40 → libsqlite3-sys 0.38 uses std::cfg_select (stable since 1.95).
# toml 1.1 requires 1.85; reqwest 0.13 is fine on older.
rust-version = "1.95"

[dependencies]
tokio = { version = "1", features = ["full"] }
# 0.13: rustls-tls renamed to rustls; form is no longer default (used by OAuth).
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3"
url = "2"
async-trait = "0.1"
toml = "1"
gethostname = "1"
base64 = "0.22"
# Cursor IDE stores its session token in a SQLite globalStorage DB
# (state.vscdb); bundled so we don't depend on a system libsqlite.
rusqlite = { version = "0.40", features = ["bundled"] }

ratatui = "0.30"
crossterm = "0.29"

[profile.release]
lto = true
codegen-units = 1
